--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -14,10 +14,11 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npmmirror.com/"
+    "registry": "https://registry.npmmirror.com/",
+    "access": "public"
   },
   "scripts": {
     "test": "node ./__tests__/@power-cli/utils.test.js"
   },
-  "gitHead": "93db0b3e3b77d7effd0722f380d92a6393d04101"
+  "gitHead": "0b871395b10d61a32b257a2b233bc68fb1be04e9"
 }
