--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@power137/core",
+  "name": "@power-cli/core",
   "version": "1.0.7",
   "description": "power-cli core",
   "keywords": [
