--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,11 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "version": "1.0.8"
+  "version": "1.0.8",
+  "packages": [
+    "cammands/*",
+    "core/*",
+    "utils/*",
+    "models/*"
+  ]
 }
