--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "bin": {
-    "power": "bin/index.js"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +17,8 @@
   },
   "workspaces": [
     "packages/*"
-  ]
- 
+  ],
+  "dependencies": {
+    "@power-cli/core": "^1.0.8"
+  }
 }
