--- a/utils/utils/package.json
+++ b/utils/utils/package.json
@@ -1,18 +1,11 @@
 {
-  "name": "@power-cli/core",
-  "version": "1.0.8",
-  "description": "power-cli core",
-  "keywords": [
-    "custom",
-    "cli"
-  ],
-  "bin": {
-    "power": "lib/index.js"
-  },
+  "name": "@power-cli/utils",
+  "version": "1.0.7",
+  "description": "a utils of power-cli",
   "author": "powr <1410837981@qq.com>",
   "homepage": "",
   "license": "MIT",
-  "main": "lib/core.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -24,7 +17,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "node ./__tests__/core.test.js"
+    "test": "node ./__tests__/@power-cli/utils.test.js"
   },
   "gitHead": "85a040f9bac76bd9602a2583ebf8f3f3c1ef3d17"
 }
