--- a/lerna.json
+++ b/lerna.json
@@ -2,10 +2,6 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
   "version": "1.0.8",
-  "packages": [
-    "cammands/*",
-    "core/*",
-    "utils/*",
-    "models/*"
-  ]
+  "npmClient": "true"
+  
 }
