--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "lerna": "^6.6.2"
-  },
- 
   "workspaces": [
     "packages/**"
   ],
   "dependencies": {
-    "@power-cli/core": "^1.0.8"
+    "@power-cli/core": "^1.0.9",
+    "import-local": "^3.1.0",
+    "npmlog": "^7.0.1"
+  },
+  "devDependencies": {
+    "lerna": "^6.6.2"
   }
 }
