--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "@power-cli/core": "^1.0.10",
-    "@power-cli/utils": "file:../../utils/utils"
+    "@power-cli/utils": "file:../../utils/utils",
+    "import-local": "^3.1.0",
+    "npmlog": "^7.0.1"
   },
   "files": [
     "lib"
