--- a/packages/utils/utils/package.json
+++ b/packages/utils/utils/package.json
@@ -19,5 +19,9 @@
   "scripts": {
     "test": "node ./__tests__/@power-cli/utils.test.js"
   },
-  "gitHead": "85a040f9bac76bd9602a2583ebf8f3f3c1ef3d17"
+  "gitHead": "85a040f9bac76bd9602a2583ebf8f3f3c1ef3d17",
+  "dependencies": {
+    "import-local": "^3.1.0",
+    "npmlog": "^7.0.1"
+  }
 }
