--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,9 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
   "version": "1.0.13",
-  "npmClient": "true"
+  "npmClient": "true",
+  "workspaces": [
+    "packages/*"
+
+  ]
 }
