--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -19,9 +19,13 @@
   },
   "dependencies": {
     "@power-cli/core": "^1.0.13",
+    "@power-cli/log": "file:../../utils/log",
     "@power-cli/utils": "^1.0.13",
+    "colors": "^1.4.0",
     "import-local": "^3.1.0",
-    "npmlog": "^7.0.1"
+    "npmlog": "^7.0.1",
+    "root-check": "^2.0.0",
+    "semver": "^7.5.0"
   },
   "files": [
     "lib"
