--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -22,10 +22,14 @@
     "@power-cli/log": "file:../../utils/log",
     "@power-cli/utils": "^1.0.13",
     "colors": "^1.4.0",
+    "dotenv": "^16.0.3",
     "import-local": "^3.1.0",
+    "minimist": "^1.2.8",
     "npmlog": "^7.0.1",
+    "path-exists": "^5.0.0",
     "root-check": "^2.0.0",
-    "semver": "^7.5.0"
+    "semver": "^7.5.0",
+    "user-home": "^3.0.0"
   },
   "files": [
     "lib"
