feat: 获取npm版本号

--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,10 @@
   "version": "1.0.13",
   "npmClient": "true",
   "workspaces": [
-    "packages/*"
+    "packages/core/*",
+    "packages/commands/*",
+    "packages/models/*",
+    "packages/utils/*"
 
   ]
 }
