feat: 获取npm版本信息

--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "access": "public"
   },
   "workspaces": [
-    "packages/**"
+    "packages/*",
+    "packages/core/*",
+    "packages/commands/*",
+    "packages/models/*",
+    "packages/utils/*"
+
+    
     
   ],
   "dependencies": {
