--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@power-cli/core": "^1.0.13",
     "@power-cli/log": "file:../../utils/log",
+    "@power-cli/get-npm-info": "file:../../utils/get-npm-info",
     "@power-cli/utils": "^1.0.13",
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
