--- a/packages/utils/get-npm-info/package.json
+++ b/packages/utils/get-npm-info/package.json
@@ -29,5 +29,6 @@
   "dependencies": {
     "axios": "^1.4.0",
     "semver": "^7.5.1"
-  }
+  },
+  "gitHead": "fed6cabb258c4bec4d99f7234e00e96070fb6239"
 }
