--- a/packages/utils/get-npm-info/package.json
+++ b/packages/utils/get-npm-info/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npmmirror.com/"
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,5 @@
     "axios": "^1.4.0",
     "semver": "^7.5.1"
   },
-  "gitHead": "db009a74025e0d2df30089bc63da03c60f0bd41a"
+  "gitHead": "cfcb55963a9ee67eff1be68af095ba4def45b678"
 }
