--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -12,7 +12,7 @@
   "author": "powr <1410837981@qq.com>",
   "homepage": "",
   "license": "MIT",
-  "main": "lib/core.js",
+  "main": "bin/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -22,16 +22,14 @@
     "@power-cli/log": "file:../../utils/log",
     "@power-cli/utils": "file:../../utils/utils",
     "@power-cli/init": "file:../../utils/init",
+    "@power-cli/exec": "file:../../utils/exec",
     "colors": "^1.4.0",
     "commander": "^10.0.1",
     "dotenv": "^16.0.3",
     "import-local": "^3.1.0",
-    "minimist": "^1.2.8",
     "npmlog": "^7.0.1",
-    "path-exists": "^5.0.0",
     "root-check": "^2.0.0",
-    "semver": "^7.5.0",
-    "user-home": "^3.0.0"
+    "semver": "^7.5.0"
   },
   "files": [
     "lib"
