--- a/packages/core/exec/package.json
+++ b/packages/core/exec/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@power-cli/exec",
-  "version": "1.0.25",
+  "version": "1.0.26",
   "description": "> TODO: description",
   "author": "powr <1410837981@qq.com>",
   "homepage": "https://github.com/power17/power-cli#readme",
@@ -27,7 +27,7 @@
     "url": "https://github.com/power17/power-cli/issues"
   },
   "dependencies": {
-    "@power-cli/package": "file:../../models/package",
-    "@power-cli/log": "file:../../utils/log"
+    "@power-cli/log": "file:../../utils/log",
+    "@power-cli/package": "file:../../models/package"
   }
 }
