--- a/packages/commands/init/package.json
+++ b/packages/commands/init/package.json
@@ -31,6 +31,8 @@
     "@power-cli/log": "file:../../utils/log",
     "@power-cli/request": "file:../../utils/request",
     "@power-cli/utils": "file:../../utils/utils",
+    "ejs": "^3.1.9",
+    "glob": "^10.2.5",
     "inquirer": "^8.0.0",
     "semver": "^7.5.1"
   }
