--- a/packages/commands/add/package.json
+++ b/packages/commands/add/package.json
@@ -32,6 +32,8 @@
     "@power-cli/log": "file:../../utils/log",
     "@power-cli/package": "file:../../models/package",
     "@power-cli/utils": "file:../../utils/utils",
+    "ejs": "^3.1.9",
+    "glob": "^10.3.3",
     "inquirer": "^8.0.0"
   },
   "devDependencies": {
