--- a/packages/commands/add/package.json
+++ b/packages/commands/add/package.json
@@ -35,7 +35,8 @@
     "ejs": "^3.1.9",
     "glob": "^10.3.3",
     "inquirer": "^8.0.0",
-    "pkg-up": "^3.1.0"
+    "pkg-up": "^3.1.0",
+    "semver": "^7.5.4"
   },
   "devDependencies": {
     "eslint": "^8.44.0"
