--- a/packages/commands/add/package.json
+++ b/packages/commands/add/package.json
@@ -31,6 +31,7 @@
     "@power-cli/init": "file:../init",
     "@power-cli/log": "file:../../utils/log",
     "@power-cli/package": "file:../../models/package",
+    "@power-cli/request": "file:../../utils/request",
     "@power-cli/utils": "file:../../utils/utils",
     "ejs": "^3.1.9",
     "glob": "^10.3.3",
