--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "qs": "^6.11.2"
   }
 }
