--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "packages/core/cli/bin/index.js",
   "scripts": {
+    "build":"build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
