--- a/packages/models/git/package.json
+++ b/packages/models/git/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@power-cli/log": "file:../../utils/log",
     "inquirer": "8.2.4",
-    "simple-git": "^3.19.1"
+    "simple-git": "^3.19.1",
+    "terminal-link": "2.1.1"
   }
 }
