--- a/packages/models/git/package.json
+++ b/packages/models/git/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@power-cli/log": "file:../../utils/log",
+    "axios": "^1.4.0",
     "inquirer": "8.2.4",
     "simple-git": "^3.19.1",
     "terminal-link": "2.1.1"
